[gd_scene load_steps=15 format=2]

[ext_resource path="res://mundo_dos_hada.png" type="Texture" id=1]
[ext_resource path="res://hada_nana.png" type="Texture" id=2]
[ext_resource path="res://mundo_dos_hada.gd" type="Script" id=3]
[ext_resource path="res://win.wav" type="AudioStream" id=4]
[ext_resource path="res://lose.wav" type="AudioStream" id=5]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.0745098, 0.533333, 0.188235, 1 )
corner_radius_top_left = 100
corner_radius_top_right = 100
corner_radius_bottom_right = 100
corner_radius_bottom_left = 100

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.00784314, 0.760784, 0.192157, 1 )
corner_radius_top_left = 100
corner_radius_top_right = 100
corner_radius_bottom_right = 100
corner_radius_bottom_left = 100

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.00784314, 0.760784, 0.192157, 1 )
corner_radius_top_left = 100
corner_radius_top_right = 100
corner_radius_bottom_right = 100
corner_radius_bottom_left = 100

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.117647, 0.631373, 0.192157, 1 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.529412, 0.517647, 0.0352941, 1 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.0431373, 0.980392, 0.254902, 1 )
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 1, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.0431373, 0.980392, 0.254902, 1 )
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 1, 0, 0, 1 )

[node name="mundo_dos_hada" type="Sprite"]
position = Vector2( 511.171, 326.61 )
scale = Vector2( 0.957401, 0.957401 )
texture = ExtResource( 1 )
script = ExtResource( 3 )

[node name="hada_nana" type="Sprite" parent="."]
position = Vector2( 383.047, -144.215 )
texture = ExtResource( 2 )

[node name="BtnIniciar" type="Button" parent="."]
margin_left = 351.354
margin_top = -34.1188
margin_right = 413.354
margin_bottom = 4.8812
rect_scale = Vector2( 1.47463, 1.47463 )
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "INICIAR"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextEdit2" type="TextEdit" parent="."]
margin_left = -351.557
margin_top = -19.0979
margin_right = -142.557
margin_bottom = 63.9021
rect_scale = Vector2( 1.06242, 1.15604 )
rect_pivot_offset = Vector2( -432.783, -324.915 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/background_color = Color( 0.439216, 0.372549, 0.372549, 1 )
custom_colors/font_color_readonly = Color( 0, 0, 0, 1 )
text = "*LA PAZ ES UN DERECHO Y UN DEBER DE OBLIGATORIO CUMPLIMIENTO"
readonly = true
syntax_highlighting = true
fold_gutter = true
wrap_enabled = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextEdit3" type="TextEdit" parent="."]
margin_left = -221.34
margin_top = -196.904
margin_right = 23.6601
margin_bottom = -99.9041
rect_scale = Vector2( 1.30818, 1.14058 )
rect_pivot_offset = Vector2( -432.783, -324.915 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/background_color = Color( 0.439216, 0.372549, 0.372549, 1 )
custom_colors/font_color_readonly = Color( 0, 0, 0, 1 )
text = "*SE PROHÍBEN LA ESCLAVITUD, LA SERVIDUMBRE Y LA TRATA DE SERES HUMANOS "
readonly = true
syntax_highlighting = true
fold_gutter = true
wrap_enabled = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextEdit4" type="TextEdit" parent="."]
margin_left = -242.802
margin_top = -21.1119
margin_right = 2.19743
margin_bottom = 31.8881
rect_scale = Vector2( 1.3713, 1.18027 )
rect_pivot_offset = Vector2( -432.783, -324.915 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/background_color = Color( 0.439216, 0.372549, 0.372549, 1 )
custom_colors/font_color_readonly = Color( 0, 0, 0, 1 )
text = "*SE GARANTIZA LA LIBERTAD DE CULTOS"
readonly = true
syntax_highlighting = true
fold_gutter = true
wrap_enabled = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextEdit5" type="TextEdit" parent="."]
margin_left = 51.0
margin_top = 64.0
margin_right = 296.0
margin_bottom = 135.0
rect_scale = Vector2( 1.26511, 1.23448 )
rect_pivot_offset = Vector2( -432.783, -324.915 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/background_color = Color( 0.439216, 0.372549, 0.372549, 1 )
custom_colors/font_color_readonly = Color( 0, 0, 0, 1 )
text = "*EL TRABAJO ES UN DERECHO, TODA PERSONA ES LIBRE DE ESCOGER PROFESIÓN U OFICIO"
readonly = true
syntax_highlighting = true
fold_gutter = true
wrap_enabled = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextEdit" type="TextEdit" parent="."]
margin_left = -433.0
margin_top = -150.0
margin_right = -188.0
margin_bottom = -53.0
rect_scale = Vector2( 1.2089, 1.2089 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/background_color = Color( 0.439216, 0.372549, 0.372549, 1 )
custom_colors/font_color_readonly = Color( 0, 0, 0, 1 )
text = "*DERECHO A LA VIDA
*NADIE SERÁ SOMETIDO A DESAPARICIÓN FORZADA Y TORTURAS "
readonly = true
syntax_highlighting = true
fold_gutter = true
wrap_enabled = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Pregunta1" type="Button" parent="."]
visible = false
margin_left = -530.514
margin_top = -201.758
margin_right = -215.514
margin_bottom = -173.758
rect_scale = Vector2( 1.44835, 1.44835 )
custom_styles/disabled = SubResource( 4 )
custom_colors/font_color_disabled = Color( 1, 1, 1, 1 )
disabled = true
text = "¿Cuál de las siguientes opciones son derechos?"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Pregunta2" type="Button" parent="."]
visible = false
margin_left = -292.379
margin_top = -271.309
margin_right = 118.621
margin_bottom = -234.309
rect_scale = Vector2( 1.44835, 1.44835 )
custom_styles/disabled = SubResource( 4 )
custom_colors/font_color_disabled = Color( 1, 1, 1, 1 )
disabled = true
text = "En Colombia las personas tienen derecho a la libertad de culto"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Pregunta3" type="Button" parent="."]
visible = false
margin_left = -247.827
margin_top = -70.8273
margin_right = 163.173
margin_bottom = -33.8273
rect_scale = Vector2( 1.44835, 1.44835 )
custom_styles/disabled = SubResource( 4 )
custom_colors/font_color_disabled = Color( 1, 1, 1, 1 )
disabled = true
text = "La esclavitud y la tortura están prohibidas en Colombia"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Pregunta4" type="Button" parent="."]
visible = false
margin_left = -234.931
margin_top = 24.1375
margin_right = 176.069
margin_bottom = 61.1375
rect_scale = Vector2( 1.44835, 1.44835 )
custom_styles/disabled = SubResource( 4 )
custom_colors/font_color_disabled = Color( 1, 1, 1, 1 )
disabled = true
text = "En Colombia tienes libertad de elegir tu profesión"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Respuesta41" type="Button" parent="."]
visible = false
margin_left = -156.699
margin_top = 93.3051
margin_right = -51.6986
margin_bottom = 113.305
rect_scale = Vector2( 1.44835, 1.44835 )
custom_styles/normal = SubResource( 5 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "SI"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Respuesta42" type="Button" parent="."]
visible = false
margin_left = 78.9549
margin_top = 93.3051
margin_right = 183.955
margin_bottom = 113.305
rect_scale = Vector2( 1.44835, 1.44835 )
custom_styles/normal = SubResource( 5 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "NO"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Respuesta31" type="Button" parent="."]
visible = false
margin_left = -147.319
margin_top = -7.52173
margin_right = -42.3194
margin_bottom = 12.4783
rect_scale = Vector2( 1.44835, 1.44835 )
custom_styles/normal = SubResource( 5 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "SI"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Respuesta32" type="Button" parent="."]
visible = false
margin_left = 80.1272
margin_top = -7.52173
margin_right = 185.127
margin_bottom = 12.4783
rect_scale = Vector2( 1.44835, 1.44835 )
custom_styles/normal = SubResource( 5 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "NO"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Respuesta21" type="Button" parent="."]
visible = false
margin_left = -67.5959
margin_top = -211.52
margin_right = 37.4041
margin_bottom = -191.52
rect_scale = Vector2( 1.44835, 1.44835 )
custom_styles/normal = SubResource( 5 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "SI"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Respuesta22" type="Button" parent="."]
visible = false
margin_left = 112.955
margin_top = -212.693
margin_right = 217.955
margin_bottom = -192.693
rect_scale = Vector2( 1.44835, 1.44835 )
custom_styles/normal = SubResource( 5 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "NO"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Respuesta11" type="Button" parent="."]
visible = false
margin_left = -507.248
margin_top = -143.521
margin_right = -402.248
margin_bottom = -123.521
rect_scale = Vector2( 1.44835, 1.44835 )
custom_styles/normal = SubResource( 5 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "ROBAR Y MATAR"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Respuesta12" type="Button" parent="."]
visible = false
margin_left = -507.248
margin_top = -96.6246
margin_right = -395.248
margin_bottom = -76.6246
rect_scale = Vector2( 1.44835, 1.44835 )
custom_styles/normal = SubResource( 5 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "LA VIDA Y LA PAZ"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Respuesta13" type="Button" parent="."]
visible = false
margin_left = -503.731
margin_top = -53.2456
margin_right = -406.731
margin_bottom = -33.2456
rect_scale = Vector2( 1.44835, 1.44835 )
custom_styles/normal = SubResource( 5 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "ESCLAVITUD"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Heroe" type="Sprite" parent="."]
position = Vector2( -450.255, 121.701 )

[node name="Demonio" type="Sprite" parent="."]
position = Vector2( 448.352, -146.454 )

[node name="Label" type="Label" parent="."]
visible = false
margin_left = 51.0957
margin_top = 162.642
margin_right = 275.095
margin_bottom = 202.642
custom_colors/font_color = Color( 0, 0, 0, 1 )
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="."]
visible = false
margin_left = 74.4728
margin_top = 227.162
margin_right = 146.473
margin_bottom = 267.162
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "DEMONIO"
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VidaHeroe" type="ProgressBar" parent="."]
visible = false
margin_left = 149.0
margin_top = 161.0
margin_right = 360.0
margin_bottom = 194.0
custom_styles/fg = SubResource( 6 )
custom_styles/bg = SubResource( 7 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
value = 100.0
rounded = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VidaDemonio" type="ProgressBar" parent="."]
visible = false
margin_left = 147.104
margin_top = 207.459
margin_right = 358.104
margin_bottom = 240.459
custom_styles/fg = SubResource( 8 )
custom_styles/bg = SubResource( 9 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
value = 100.0
rounded = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerWin" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="PlayerLose" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
